# pipecat-mcp-server

./: .gitignore  CHANGELOG.md  README.md  _test_mcp_client.py  bot_standalone.py  pyproject.toml  start_playwright_mcp.bat  test_qwen-asr.py  test_voxcpm.py  test_voxcpm_stream.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-question.yml
.github/workflows/: build.yaml  format.yaml  publish.yaml
qwen-asr/: 部署命令.md
skills/deploy/: SKILL.md
skills/init/: SKILL.md
skills/talk/: SKILL.md
src/pipecat_mcp_server/: agent.py  agent_ipc.py  bot.py  server.py
src/pipecat_mcp_server/memory/: __init__.py  manager.py  persistence.py  prompts.py
src/pipecat_mcp_server/processors/: kokoro_tts.py  mimo_stt.py  mimo_tts.py  qwen_stt.py  vision.py  voxcpm_tts.py
src/pipecat_mcp_server/processors/screen_capture/: __init__.py  base_capture_backend.py  linux_x11_capture_backend.py  macos_capture_backend.py  screen_capture_processor.py  windows_capture_backend.py
src/pipecat_mcp_server/standalone/: __init__.py  constants.py  default_tools.py  mcp_loader.py  runtime.py  services.py  wake_word.py
voice_samples/: audio_metadata.json
voxcpm/: Dockerfile  部署命令.md
